--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link rel="canonical" href="https://didcodehere.github.io/SeracTECH-FREE/" />
     
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="./logo.png" />
-    <link rel="apple-touch-icon" href="./logo.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" type="image/png" href="/SeracTECH-FREE/logo.png" />
+    <link rel="apple-touch-icon" href="/SeracTECH-FREE/logo.png" />
+    <link rel="manifest" href="/SeracTECH-FREE/manifest.json" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
